# 02501-advanced-deep-learning-in-computer-vision

./: .gitignore  main.py  pyproject.toml
project/: .gitignore  GUIDE.md  Grounding-DINO-Tiny_few_shot_results.json  Grounding-DINO-Tiny_results_diagnostics.json  InternVL2_5-1B_results.json  InternVL2_5-1B_results_diagnostics.json  README.md  ROADMAP.md  config.py  jobscript.sh  jobscript_car_debug.sh  jobscript_oracle_200.sh  jobscript_oracle_700.sh  main.py  pipeline.py  pyproject.toml  requirements.txt  task3_eval.py  task3b_verify.py  test.py
project/.dvc/: .gitignore  config
project/data/: coco_categories.py  dataloaders.py  datasets.py  eval_split.py  support-sets.py  support_sampler.py  visual_prompt.py
project/data/coco/: .gitignore  annotations.dvc  val2017.dvc
project/data/splits/: README.md  val_200.json  val_horse_100.json  val_horse_50.json  val_horse_debug_5.json  val_pilot.example.json  val_test_700.json
project/models/: base_vlm.py  grounding_dino.py  in-context-learning.py  internVL.py  qwen.py  vlm_dino_fusion.py  vlm_text_generator.py  vlm_verifier.py
project/prompts/: __init__.py  base_strategy.py  cropped_exemplars.py  oracle_shot.py  set_of_mark.py  side_by_side.py  side_by_side_with_coords.py  text_from_vision.py  verification_strategy.py  vlm_text_generation.py  zero_shot_vlm.py
project/scripts/: build_eval_split.py  convert_task3_results.py  download_coco_val.py  preview_few_shot_examples.py  visualize_verification.py
project/tests/: test_parser_contracts.py
