[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "einops>=0.8.0",
    "pillow>=12.2.0",
    "pycocotools>=2.0.11",
    "qwen-vl-utils>=0.0.14",
    "timm>=1.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.49.0,<5.0.0",
    "wandb>=0.25.1",
]
